tools/tests/errors/path_getsize_missing.ki
var path = import("path")
discard path.getsize("/no/such/kirito/path/zzz.bin")
